[project]
name = "pg-event-bus"
version = "0.1.0"
description = "PostgreSQL-based event bus system - lightweight, high-performance, reliable event processing framework"
readme = "README.md"
authors = [
    { name = "veno", email = "happ1less1917@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "asyncpg>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
pg-event-bus = "pg_event_bus:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
